# second_meeting_fastapi

./: .gitignore  main.py  pyproject.toml
