[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Andrew <balshowandrew@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
fastapi = {extras = ["all"], version = "^0.104.1"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
